task5/tests/our-tests/output/t8.out
lli: <stdin>:39:23: error: use of undefined value '%-22032'
%t8 = add i8 %-22033, %-22032
                      ^

